--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "linked-list",
+  "name": "data-structures",
   "version": "1.0.0",
   "description": "",
-  "main": "LinkedList.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "prettier": "3.2.4"
+  }
 }
